PR7 - Changed to using flatMap instead of concat for accumulating all patterns for validation